--- a/p5sketches.html
+++ b/p5sketches.html
@@ -48,19 +48,21 @@
             <!-- first p5 canvas -->
             <div id="title">
                 <h1>p5.js sketches</h1>
-                <h3>Sine Waves</h3>
+                <h3 >Sin Waves</h3>
             </div>
             <div class="row">
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div id="waveCanvas" class="col-xl-8 col-md-6 col-xs-12"></div>
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
             <div class="row">
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div id="descrpWave" class="col-xl-8 col-md-8 col-xs-12">
                     <p>In the process of learning p5.js, one of the first visually appealing sketches I made was a sin wave visualization.
-                        The sketch draws circles along a sin wave while gradually changing color! The above visualization is embedded p5.js and
-                        I've included a few more versions below as gifs,
-                        because drawing thousands of circles can get pretty laggy.</p>
+                        The sketch draws circles along a sin wave while gradually changing color. The above visualization is embedded p5.js and
+                        I've included a few more versions below as gifs.</p>
                 </div>
-                <div class="col-md-4 hidden-xs"></div>
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
             <div class="row" id="moreWaves">
                 <div class="col-md-4 col-xs-12">
@@ -79,23 +81,27 @@
                 <h3 id="polyHeader">Polygon Generation</h3>
             </div>
             <div class="row">
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div id="faceCanvas" class="col-xl-8 col-md-6 col-xs-12"></div>
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
 
             <div class="row">
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div id="descrpFace" class="col-xl-8 col-md-8 col-xs-12">
                     <p>Randomly placed polygons with faces generated based on the x and y position of the mouse.
                         Move the mouse around to make some shapes.</p>
                 </div>
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
 
             <!-- ending statement -->
             <div class="row" id="endRow">
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div class="col-xl-8 col-md-8 col-xs-12">
-                    <h2>? Is this CrEaTiVe CoDiNg yet ?</h2>
-                    <h3>will update with more things in future</h3>
+                    <h3>will update with more things in future!</h3>
                 </div>
-                <div class="col-md-4 hidden-xs"></div>
+                <div class="col-xs-hidden col-md-2 col-xl-2"></div>
             </div>
         </div>
         <footer id="footer" class="fixed-bottom">
