Page for IS4300
- Assignment page for class added
- Additions to the p5type article

--- a/p5type.html
+++ b/p5type.html
@@ -47,7 +47,7 @@
             </div>
 
             <!-- Closet video -->
-            <div id="vidDiv">
+            <div class="vidDiv">
             <video playsinline autoplay muted loop id="closetVideo">
                 <source src="/Animation-Gifs/sweater_matrix.mp4" type="video/mp4">
               </video>
@@ -64,7 +64,7 @@
                     <p>
                         <strong>Typography</strong> is an integral part of design and goes much deeper than "that font bad, 
                         this font good". We are influenced by typography, good and bad, everyday. In an effort to buff my
-                        design skills and dive deeper into typography, I began reading John Kane's <i>A type primer</i>.
+                        design skills and dive deeper into typography, I began reading John Kane's <i>A Type Primer</i>.
                     </p>
                     <p>
                         Kane emphasizes understanding of the letterform in several ways. One exercise places two forms of 
@@ -92,7 +92,14 @@
                         Letters float around the canvas and when shaken, display a 
                         relevant term (and a pun, for fun).
                     </p>
-                    <p class="imgDescrp padbot-2rem">Highlights from the p5 sketch</p>
+
+                    <div class="vidDiv">
+                        <video playsinline autoplay muted loop id="closetVideo">
+                            <source src="/Animation-Gifs/floatWalkthru.mp4" type="video/mp4">
+                          </video>
+                          <p class="imgDescrp padbot-2rem">Highlights from the p5 sketch</p>
+                    </div>
+                    
                     <p>
                         One way to understand the form of letters is to examine them very closely,
                         looking for how the balance between form and counter-form is achieved, and to appreciate 
@@ -107,6 +114,12 @@
                        I made a tool in p5 that allows users to make a two by two grid of their own.
                        </a>
                     </p>
+
+                    <div class="vidDiv">
+                        <img href="" />
+                          <p class="imgDescrp padbot-2rem">Some grids my friends have made</p>
+                    </div>
+
                    <p>
                        Users can choose their desired character, and resize and reposition as they please. Once they're satisfied
                        with how it looks, they can submit their design. After four submissions, a composite grid is created by 
