--- a/Stream-Checker/index.html
+++ b/Stream-Checker/index.html
@@ -1,56 +1,23 @@
 <!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="twitchTestJS.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
 <link type="text/css" href="twitchTestCSS.css" rel="stylesheet"  ></link>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"></link>
 <link rel="icon" type="image/png" href="https://cdn1.iconfinder.com/data/icons/micon-social-pack/512/twitch-128.png"/>
-<html>
+<link href="https://fonts.googleapis.com/css?family=Roboto:700&display=swap" rel="stylesheet">
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<title>Twitch Status - Yikai Kuo</title>
+<html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"></meta>
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 
 <body align="center">
-    <div class="row title">
-      <div class="col-xs-1"></div>
-      <div align="center" class="col-xs-10">
-        <h1 id="shit">Enter a streamer to see if they're broadcasting!</h1>
-        <form onsubmit="return false"><input id="lom" type="text" placeholder= "streamer input" name="username"></form>
-        <button id="button" class="btn">:)</button>
-        <p id="liveCheck"></p>
-      </div>
-      <div class="col-xs-1"></div>
+    <div id="container">
     </div>
-<div id="boxes">
-<!--
-<div class="container-fluid">
-  <div class="row">
-        <div class="col-md-3 col-lg-4  col-xs-1 col-sm-3"></div>
 
-        <div class="col-md-6 col-xs-10 col-lg-4 col-sm-6">
-            <div class="row backgroundDiv">
-                <div id="profPicDiv" class="col-md-1 col-xs-1">
-                    <div class="noPic"></div>
-                </div>
-                <div class="userDiv col-md-8 col-xs-6">                   
-                    <p id="userText"><strong>jihgagraafoiiojhagiogawoijagioagwoi;aw</strong></p>
-                </div>
-                <div id="mang0" class="twitchIconDiv col-md-1 col-xs-1">
-                    <input onclick="window.open('http://www.google.com', '_blank')" type="image" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png" 
-                      class="btTxt submit link" id="twitchIcon" />
-                    <img id="twitchIcon" src="https://cdn1.iconfinder.com/data/icons/simple-icons/2048/twitch-2048-black.png"></img>
-                </div>
-                <div class="indicator col-md-1 col-xs-1"><p id="status"><strong>live<strong><p></div>
-
-            </div> 
-            <div class="col-xs-1"></div>
-
-        </div> 
-    </div>
-</div>
---> 
-
-</div>
-</body>
+    <script src="./bundle.js"></script>
+<script type="text/javascript" src="/bundle.js"></script><script type="text/javascript" src="/bundle.js"></script></body>
 </html>
