--- a/is4300.html
+++ b/is4300.html
@@ -49,15 +49,68 @@
             <div class="row">
                 <div class="col-xs-hidden col-md-2 col-xl-2"></div>
                 <div id="descrp" class="col-xl-8 col-md-8 col-xs-12">
-                    <!-- <p>
-                        <i><q>Design is solving problems, and typography is solving problems by making marks.</q></i>
-                        <cite> - John Kane</cite>
-                    </p> -->
 
-
-                    <div class="padtop-3rem">
+                    <div class="padtop-3rem padbot-3rem">
                         <h2>Assignments</h2>
-                        <p>Future assignments for IS4300 will be posted on this page</p>
+                        <h4 class="underline"><a href="#I1">I1: Brainstorming Ideas: Learning at NEU</a></h4>
+                    </div>
+
+                    <div id="I1">
+                        <h2>I1: Brainstorming Ideas: Learning at NEU</h2>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Random Flashcard Study Buddy</h5>
+                            <p>A mobile app that asks a simple flashcard question at different times during the day. 
+                                One of the most common methods for remembering information is to make flashcards.  
+                                However, a single successful pass through your flashcard set doesn’t necessarily mean 
+                                you’ve absorbed all the information. I have frequently successfully gone through 
+                                my entire flash card set one night, only to wake up remembering only half of the 
+                                information. With this app, users scan in their cards, and in the week before their 
+                                exam date, the app will ask questions at different intervals throughout the day, 
+                                so you can evaluate if you’ve actually absorbed the material or not. Users can set 
+                                time intervals so that questions will only be asked when they are free to respond, 
+                                but the exact time within that interval will be randomized, so users don’t get used 
+                                to a pattern.
+                            </p>
+                        </div>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Auto-generated Lecture Transcripts</h5>
+                            <p>Most classrooms and every large lecture space at Northeastern University has microphones 
+                                that professors can use. Therefore, transcripts for every lecture can be auto-generated 
+                                s long as microphones are turned on. Tegrity recorded lectures often have unclear audio, 
+                                and the videos might even be helpful. A time-stamped document that users can follow along 
+                                to will always be clear, and if organized into a web app or mobile app, will be organized 
+                                as well.
+                            </p>
+                        </div>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Group Meeting Status Tracker</h5>
+                            <p>Coordinating group meetings through a group chat is quite annoying. Most of the time people 
+                                don’t bother opening the chat, or worse, open the chat and never respond. This mobile app 
+                                would simplify the entire process. Once downloaded, users join the group project. Users 
+                                input their availabilities, and the app auto-generates potential meeting times where 
+                                everyone is free. Once the group decides on a meeting time, this time is set. In the
+                                 hour before the meeting, the app sends a notification to all members of the project, 
+                                 asking them to if they are either: on their way, already there, or not going.  
+                                 Individual statuses are visible to all, and if a member has not opened up the app 
+                                 within that hour, they are automatically marked as “not going” 10 minutes before 
+                                 the meeting time. This way, groups have a clear picture of who is coming, and who
+                                 is not, without any doubt.
+                            </p>
+                        </div>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Anonymous Feedback</h5>
+                            <p>TRACE evaluations are performed at the end of every semester so professors can receive 
+                                feedback about their course. However, many students feel that this is already too late, 
+                                changes that might have benefited them can only be implemented in the next semester. 
+                                An anonymous feedback tool would allow for students to leave feedback during the 
+                                current semester. Users create anonymous posts that can be “liked” to show agreement. 
+                                The content of the posts is limited to the course structure and feedback about the 
+                                professor.  If a certain threshold of “likes” is reached, a post can be forwarded 
+                                to a superior that can choose to issue a statement. The superior will see the
+                                 names of the students, keeping a degree of accountability. 
+                            </p>
+                        </div>
+                       
                     </div>
                    
                 </div>
