Distraction Destroyer added in ideas

--- a/is4300.html
+++ b/is4300.html
@@ -110,6 +110,24 @@
                                  names of the students, keeping a degree of accountability. 
                             </p>
                         </div>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Distraction Destroyer</h5>
+                            <p>A USB or bluetooth device that connects to your laptop that when activated, closes all non-productivity
+                                applications and tabs in the web browser. Users can add websites and applications they classify as 
+                                "non-productivity". The device itself has only one button. When pressed, all distractions are destroyed. 
+                                An optional "nuclear winter" addon then blocks the re-opening of all "non-productivity" applications and 
+                                sites for a set amount of time. 
+                            </p>
+                        </div>
+                        <div class="padtop-1rem padbot-2rem">
+                            <h5>Distraction Destroyer</h5>
+                            <p>A USB or bluetooth device that connects to your laptop that when activated, closes all non-productivity
+                                applications and tabs in the web browser. Users can add websites and applications they classify as 
+                                "non-productivity". The device itself has only one button. When pressed, all distractions are destroyed. 
+                                An optional "nuclear winter" addon then blocks the re-opening of all "non-productivity" applications and 
+                                sites for a set amount of time. 
+                            </p>
+                        </div>
                        
                     </div>
                    
