--- a/is4300.html
+++ b/is4300.html
@@ -120,12 +120,12 @@
                             </p>
                         </div>
                         <div class="padtop-1rem padbot-2rem">
-                            <h5>Distraction Destroyer</h5>
-                            <p>A USB or bluetooth device that connects to your laptop that when activated, closes all non-productivity
-                                applications and tabs in the web browser. Users can add websites and applications they classify as 
-                                "non-productivity". The device itself has only one button. When pressed, all distractions are destroyed. 
-                                An optional "nuclear winter" addon then blocks the re-opening of all "non-productivity" applications and 
-                                sites for a set amount of time. 
+                            <h5>Pomodoro Clock - Location Activated</h5>
+                            <p>Pomodoro clocks are timers for 30 minutes, and a frequently used as a study tool. One starts the timer, and
+                                works until it rings. A mobile app pomodoro clock that is activiated when a user enters an on campus library 
+                                or study space would push users to start being productive right away, as the timer starts as soon as they enter
+                                building. Users can toggle blackout times for when they don't want the clock to start automatically, but the 
+                                app will default to automatic, location based, start.
                             </p>
                         </div>
                        
