--- a/is4300.html
+++ b/is4300.html
@@ -121,8 +121,8 @@
                         </div>
                         <div class="padtop-1rem padbot-2rem">
                             <h5>Pomodoro Clock - Location Activated</h5>
-                            <p>Pomodoro clocks are timers for 30 minutes, and a frequently used as a study tool. One starts the timer, and
-                                works until it rings. A mobile app pomodoro clock that is activiated when a user enters an on campus library 
+                            <p>Pomodoro clocks are timers for 30 minutes, and are frequently used as a study tool. One starts the timer, and
+                                studies until it rings. A mobile app pomodoro clock that is activiated when a user enters an on campus library 
                                 or study space would push users to start being productive right away, as the timer starts as soon as they enter
                                 building. Users can toggle blackout times for when they don't want the clock to start automatically, but the 
                                 app will default to automatic, location based, start.
