Updated IS4300 assignment page

--- a/is4300.html
+++ b/is4300.html
@@ -59,27 +59,12 @@
                         <h2>I1: Brainstorming Ideas: Learning at NEU</h2>
                         <div class="padtop-1rem padbot-2rem">
                             <h5>Random Flashcard Study Buddy</h5>
-                            <p>A mobile app that asks a simple flashcard question at different times during the day. 
-                                One of the most common methods for remembering information is to make flashcards.  
-                                However, a single successful pass through your flashcard set doesn’t necessarily mean 
-                                you’ve absorbed all the information. I have frequently successfully gone through 
-                                my entire flash card set one night, only to wake up remembering only half of the 
-                                information. With this app, users scan in their cards, and in the week before their 
-                                exam date, the app will ask questions at different intervals throughout the day, 
-                                so you can evaluate if you’ve actually absorbed the material or not. Users can set 
-                                time intervals so that questions will only be asked when they are free to respond, 
-                                but the exact time within that interval will be randomized, so users don’t get used 
-                                to a pattern.
+                            <p>A mobile app that asks a simple flashcard question at different times during the day. One of the most common methods for remembering information is to make flashcards.  However, a single successful pass through your flashcard set doesn’t necessarily mean you’ve absorbed all the information. I have frequently successfully gone through my entire flash card set one night, only to wake up remembering only half of the information. With this app, users scan in their cards, and in the week before their exam date, the app will ask questions at different intervals everyday, so you can evaluate if you’ve actually absorbed the material or not. Users can set time intervals so that questions will only be asked when they are free to respond, but the exact time within that interval will be randomized, so users don’t get used to a pattern.  Additional augmented reality view can display a single or a set of cards in space that flip to display answers. Or, questions can be displayed in front of the user, and answers to the side, so viewers look to the side for the answer.
                             </p>
                         </div>
                         <div class="padtop-1rem padbot-2rem">
                             <h5>Auto-generated Lecture Transcripts</h5>
-                            <p>Most classrooms and every large lecture space at Northeastern University has microphones 
-                                that professors can use. Therefore, transcripts for every lecture can be auto-generated 
-                                s long as microphones are turned on. Tegrity recorded lectures often have unclear audio, 
-                                and the videos might even be helpful. A time-stamped document that users can follow along 
-                                to will always be clear, and if organized into a web app or mobile app, will be organized 
-                                as well.
+                            <p>Most classrooms and every large lecture space at Northeastern University has microphones that professors can use. Therefore, transcripts for every lecture can be auto-generated as long as microphones are turned on. Tegrity recorded lectures often have unclear audio, and the videos might even be unhelpful. A time-stamped text document that users can follow along to will always be clear. These text documents would be organized and distributed via a web app that Northeastern students can login to.  Professors can “highlight” specific transcripts as important, and students can “favorite” their own transcripts.The ability to download transcripts removes allows for offline viewing and printing.
                             </p>
                         </div>
                         <div class="padtop-1rem padbot-2rem">
@@ -112,20 +97,12 @@
                         </div>
                         <div class="padtop-1rem padbot-2rem">
                             <h5>Distraction Destroyer</h5>
-                            <p>A USB or bluetooth device that connects to your laptop that when activated, closes all non-productivity
-                                applications and tabs in the web browser. Users can add websites and applications they classify as 
-                                "non-productivity". The device itself has only one button. When pressed, all distractions are destroyed. 
-                                An optional "nuclear winter" addon then blocks the re-opening of all "non-productivity" applications and 
-                                sites for a set amount of time. 
+                            <p>A bluetooth device that connects to your laptop that when activated, closes all non-productivity applications, and tabs in the web browser.  A desktop GUI application exists where users can add specific websites and applications that they classify as "non-productivity" to be closed. Distraction Destroyer will track metrics like the amount of time spent on applications, the amount of elapsed time before “non-productive” applications are opened again, and more, then create interesting data visualizations.  The device itself is small and has only one button. When pressed, all distractions are destroyed.  An optional "nuclear winter" option then blocks the re-opening of all "non-productivity" applications and sites for a set amount of time. 
                             </p>
                         </div>
                         <div class="padtop-1rem padbot-2rem">
-                            <h5>Pomodoro Clock - Location Activated</h5>
-                            <p>Pomodoro clocks are timers for 30 minutes, and are frequently used as a study tool. One starts the timer, and
-                                studies until it rings. A mobile app pomodoro clock that is activiated when a user enters an on campus library 
-                                or study space would push users to start being productive right away, as the timer starts as soon as they enter
-                                building. Users can toggle blackout times for when they don't want the clock to start automatically, but the 
-                                app will default to automatic, location based, start.
+                            <h5>Location Activated Pomodoro Clock</h5>
+                            <p>Pomodoro clocks are timers for 30 minutes, and are frequently used as a study tool. One starts the timer, and studies until it rings. A mobile app pomodoro clock that is activated when a user enters an on campus library or study space would push users to start being productive right away, as the timer starts as soon as they enter an on campus library or study space. Users can toggle blackout times for when they don't want the clock to start automatically, but the app will default to the automatic location based start. A fun visual (not basic text) representation of a pomodoro clock is the homescreen of the app. Users can also add additional off-campus buildings and locations as well, such as their favorite coffee shop. 
                             </p>
                         </div>
                        
