Remove CDNs, IS4300 page

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,8 +3,8 @@
 
 <head>
     <!-- scripts -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     </link>
     <title>About Me - Yikai Kuo</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
