--- a/animations.html
+++ b/animations.html
@@ -5,15 +5,13 @@
     <title>Animations - Yikai Kuo</title>
     <meta name="description" content="Animations by Yikai Kuo, an undergarduate student at Northeastern University studying Biology and Computer Science."/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script> 
-
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
     </link>
     <link type="text/css" href="animationCss.css" rel="stylesheet">
     </link>
-    <link rel="icon" href="ebiCON.png" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,    maximum-scale=1, user-scalable=no">
     </meta>
