--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
+    <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome :)"/>
     <title>Yikai Kuo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5/lib/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 
-    <link rel="icon" href="ebiCON.png" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
