--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
     <title>Work - Yikai Kuo</title>
     <meta name="description" content="Yikai Kuo is a biologist with a passion for gene editing, bioinformatics and art. This is his personal site, welcome welcome!  :)"/>
-    <link rel="icon" href="ebiCON.png" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     </meta>
@@ -13,7 +13,6 @@
     <meta http-equiv="Expires" content="-1" />
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
