Updated meta tag, preload video

--- a/grailed.html
+++ b/grailed.html
@@ -48,7 +48,7 @@
 
             <!-- Closet video -->
             <div id="vidDiv">
-            <video playsinline autoplay muted loop id="closetVideo">
+            <video playsinline preload="auto" autoplay muted loop id="closetVideo">
                 <source src="/Animation-Gifs/sweater_matrix.mp4" type="video/mp4">
               </video>
               <p class="imgDescrp">Tour of my virtual closet (p5js)</p>
