--- a/crossword/index.html
+++ b/crossword/index.html
@@ -160,11 +160,11 @@ let getRanks = function(d) {
   return d;
 }
 let csvs = {
-  week1: "https://docs.google.com/spreadsheets/d/1dgE8wDlzglzlzAfRqoMbrSiMq4TA24MQM8BK5bUE9-Q/pub?gid=0&single=true&output=csv",
-  week2: "https://docs.google.com/spreadsheets/d/1RZxj6DU39JIBwYb-CBzfWzv7OKcIc9mANBLhsbhYH6M/pub?gid=0&single=true&output=csv",
-  week3: "https://docs.google.com/spreadsheets/d/1utmlY5NacA0UqPoGcULnhvWfVm4fPSahdzpUPoB8Ymw/pub?gid=0&single=true&output=csv",
-  week4: "https://docs.google.com/spreadsheets/d/1JyJCq64F253Cjw6K43UQwpaMFEF7ldFm6Z0vjUVYf74/pub?gid=0&single=true&output=csv",
-  week5: "https://docs.google.com/spreadsheets/d/1I57Q6sf0L9GCt7Nz4Rwc2MCg9g-LvyuVfOw2HQ_0K7A/pub?gid=0&single=true&output=csv"
+  week1: "https://yikaikuo.com/crossword/Week1.csv?raw=true",
+  week2: "https://yikaikuo.com/crossword/Week2.csv?raw=true",
+  week3: "https://yikaikuo.com/crossword/Week3.csv?raw=true",
+  week4: "https://yikaikuo.com/crossword/Week4.csv?raw=true",
+  week5: "https://yikaikuo.com/crossword/Week5.csv?raw=true"
 };
 
 // Data wrangling
