--- a/crossword/index.html
+++ b/crossword/index.html
@@ -35,7 +35,7 @@
 
 </style>
 <body>
-  <div id="header">Week 2 Ranks For NYT Mini Crossword</div>
+  <div id="header">Placings for Week 2 of the NYT Mini Competition</div>
   <select id="colorPalette">
       <option value="interpolateInferno">interpolateInferno</option>
       <option value="interpolateViridis">interpolateViridis</option>
