remove color scale option

--- a/crossword/index.html
+++ b/crossword/index.html
@@ -36,7 +36,7 @@
 </style>
 <body>
   <div id="header">Rankings for Week 2 of the NYT Mini Competition</div>
-  <select id="colorPalette">
+<!--   <select id="colorPalette">
       <option value="interpolateInferno">interpolateInferno</option>
       <option value="interpolateViridis">interpolateViridis</option>
       <option value="interpolateMagma" selected>interpolateMagma</option>
@@ -45,7 +45,7 @@
       <option value="interpolateCool">interpolateCool</option>
       <option value="interpolateRainbow">interpolateRainbow</option>
       <option value="interpolateCubehelixDefault">interpolateCubehelixDefault</option>
-    </select>
+    </select> -->
   <select id="week">
       <option value="1">Week 1</option>
       <option value="2" selected>Week 2</option>
